Fixed overflow issues

--- a/src/module/dashboard/Home.module.css
+++ b/src/module/dashboard/Home.module.css
@@ -1,6 +1,15 @@
 * {
-    /* overflow-x: hidden; */
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.marginTopBottom {
+    margin: 20px 0px
+}
+
+.home {
+    width: 100%;
+    box-sizing: content-box;
 }
 
 .portfolioheader {
@@ -8,16 +17,15 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 620px;
-}
-
-.home {
-    padding-left: 30px;
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     font-size: 10vw;
     display: flex;
     align-items: center;
+}
+
+.portfolioheaderText {
+    font-size: 5vw !important;
+    padding-left: 30px;
 }
 
 .blue {
@@ -33,9 +41,7 @@
 }
 
 .box {
-    margin-left: 30px;
-    margin-top: 100px;
-    margin-right: 30px;
+    margin: 100px 30px;
     clear: both;
 }
 
@@ -46,6 +52,7 @@
     height: 150px;
     text-align: center;
     padding: 5px;
+    max-width: 300px !important;
 }
 
 .skillsCard2 {
@@ -54,6 +61,7 @@
     height: 150px;
     text-align: center;
     padding: 5px;
+    max-width: 300px !important;
 }
 
 .skillsCard3 {
@@ -62,6 +70,7 @@
     height: 150px;
     padding: 5px;
     text-align: center;
+    max-width: 300px !important;
 }
 
 .skillsCard4 {
@@ -70,14 +79,20 @@
     height: 150px;
     text-align: center;
     padding: 5px;
+    max-width: 300px !important;
 }
 
-.projects {
+.aboutYellowCard {
     background: #F9BF3F !important;
     min-height: 170px;
     display: flex;
     align-items: center !important;
     padding-left: 20px;
+    box-sizing: border-box;
+}
+
+.aboutYellowCardText {
+    font-size: 2vw;
 }
 
 .icon {
@@ -245,9 +260,10 @@
 .contact {
     background: rgb(152, 221, 238);
     background: linear-gradient(0deg, rgba(237, 242, 243, 1) 0%, rgba(152, 221, 238, 1) 100%);
-    padding: 20px;
     min-height: 250px;
     text-align: center;
+    max-width: 350px;
+    box-sizing: border-box;
     margin: 10px;
 }
 
@@ -263,11 +279,15 @@
     justify-content: center;
 }
 
-.contactDetail {
+.contactUsTitle {
     background: linear-gradient(to right, #070352,
             #3709dc, #2390cf, #84cfe2);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+}
+
+.contactDetail {
+    font-size: 1.5vw;
 }
 
 .button {
@@ -293,6 +313,7 @@
 .skillsCard {
     box-shadow: 1px 1px 37px -15px rgba(0, 0, 0, 0.63) !important;
     height: 150px;
+    max-width: 400px !important;
     padding: 20px;
     text-align: center !important;
 }
@@ -311,10 +332,30 @@
     .list {
         width: 90%;
     }
+
+    .contactDetail {
+        font-size: 3vw;
+    }
+
+    .contact {
+        margin: 0 !important;
+    }
 }
 
 @media only screen and (max-width:425px) {
     .list {
         width: 85%;
+    }
+
+    .portfolioheaderText {
+        font-size: 7.5vw !important;
+    }
+
+    .aboutYellowCardText {
+        font-size: 5vw;
+    }
+
+    .contactDetail {
+        font-size: 3.5vw !important;
     }
 }
